<resources>
    <string name="env">dev</string>
    <string name="facebook_app_id">195306590831308</string>
    <string name="gcm_project_id">933530461024</string>
    <string name="base_url"></string>
    <string name="base_url_dev">http://119.81.228.91</string>
    <string name="app_name">Stg</string>
    <string name="crash_toast_text">Sorry.. BeautyPop encountered problem and exit</string>
    <string name="crash_dialog_title">BeautyPop exit</string>
    <string name="crash_dialog_text">Sorry.. BeautyPop encountered problem and exit. Please help us to fix and send us a report</string>
    <string name="crash_dialog_comment_prompt">Press OK to send (Report only contains information of the problem)</string>
    <string name="crash_dialog_ok_toast">Thanks!</string>
    <string name="search_text">Search</string>
    <string name="search_tab_products">Products</string>
    <string name="search_tab_users">Users</string>
    <string name="no_user_found">No Users Found</string>
    <string name="no_product_found">No Products Found</string>
    <string name="title_purchased">Purchased</string>
    <string name="title_sold">Sold</string>
    <string name="leave_review">Leave Review</string>
    <string name="reviews">Reviews</string>
    <string name="no_review">~ No review ~</string>
    <string name="leave_review_title_1">Give a rating to</string>
    <string name="leave_review_title_2">Your experience</string>
    <string name="leave_review_input_rating">Please input a rating</string>
    <string name="leave_review_input_review">Please input your experience</string>
    <string name="leave_review_confirm">You are about to leave review for the other party. All set ?</string>
    <string name="leave_review_success">Review submitted successfully !</string>
    <string name="leave_review_failed">Failed to submit review. Please try again later.</string>
    <string name="alert_user_low_review_score">%1$s has negative reviews.  Please check his/her reviews before completing the order.</string>
    <string name="alert_user_suspended">User account %1$s is suspended.</string>
    <string name="app_desc">BeautyPop - Sell your style</string>
    <string name="app_version">Version:</string>
    <string name="request_upgrade">New version of BeautyPop is now available! Upgrade and try out our new features! </string>
    <string name="request_upgrade_confirm">Install now</string>
    <string name="request_upgrade_cancel">Cancel</string>
    <string name="lang_zh">中文</string>
    <string name="lang_en">English</string>
    <string name="lang_desc">Language:</string>
    <string name="lang_confirm">Confirm to change language?\n(BeautyPop will be restarted)</string>
    <string name="lang_complete">Language change will take effect after restart</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_email">EMAIL NOTIFICATIONS</string>
    <string name="notifications_email_new_post">New product listed</string>
    <string name="notifications_email_new_chat">New chat</string>
    <string name="notifications_email_new_comment">New comment on your product listings</string>
    <string name="notifications_email_new_promo">New promotions</string>
    <string name="notifications_push">PUSH NOTIFICATIONS</string>
    <string name="notifications_push_new_chat">New chat</string>
    <string name="notifications_push_new_comment">New comment on your product listings</string>
    <string name="notifications_push_new_follow">New follower</string>
    <string name="notifications_push_new_review">New Review</string>
    <string name="notifications_push_new_promo">New promotions</string>
    <string name="spinner_select">-Select-</string>
    <string name="clipboard_text_label">Copy</string>
    <string name="connection_timeout_title">Network Problem</string>
    <string name="connection_timeout_message">Network Problem. Please check if you are online.</string>
    <string name="url_copy_success">Link copied</string>
    <string name="url_copy_failed">Link cannot be copied</string>
    <string name="text_copy_success">Text is copied</string>
    <string name="text_copy_failed">Text cannot be copied</string>
    <string name="comment_copy_success">Text is copied</string>
    <string name="comment_copy_failed">Text cannot be copied</string>
    <string name="report_wrong_cat">Wrong Category</string>
    <string name="report_counterfeit">Counterfeit</string>
    <string name="report_repeat">Repeated Listing</string>
    <string name="report_spam">Promotions abuse / Spam</string>
    <string name="report_prohibited">Prohibited Item</string>
    <string name="report_other">Other</string>
    <string name="report_post">Report Product</string>
    <string name="report_this_post">Report this product</string>
    <string name="report_post_confirm">Report this product?</string>
    <string name="report_post_success">Report this product successfully</string>
    <string name="report_post_failed">Failed to report this product. Try again later.</string>
    <string name="report_post_other_title">Why are you reporting this product?</string>
    <string name="report_post_other_hint">Describe with details...</string>
    <string name="login">Login</string>
    <string name="login_forgot_password">Forget Password</string>
    <string name="login_new_signup">Signup</string>
    <string name="login_error_title">Login failed</string>
    <string name="login_error_message">Login failed. Please try again.</string>
    <string name="login_id_error_message">Login email or password is wrong</string>
    <string name="signup">Signup</string>
    <string name="signup_fb_title">Signup with Facebook\n(Complete in 30 seconds)</string>
    <string name="signup_fb_note">Note: BeautyPop will not post to your Facebook account</string>
    <string name="signup_email_title">Signup with Email</string>
    <string name="signup_lastname_hint">Last Name</string>
    <string name="signup_firstname_hint">First Name</string>
    <string name="signup_email_hint">Your email</string>
    <string name="signup_password_hint">Password</string>
    <string name="signup_password_confirm_hint">Enter password again</string>
    <string name="signup_privacy">Privacy</string>
    <string name="signup_terms">Terms</string>
    <string name="signup_success_title">Welcome to BeautyPop! An email will be sent to you.</string>
    <string name="signup_success_title_2">Click the link in the email to complete your registration.</string>
    <string name="signup_success_note">Note: If you had not received confirmation email from BeautyPop. Please check and see if it had dropped to your Ads/Spams folder.</string>
    <string name="signup_error_email_unverified">Email is not verified. Please check your email account and click the verification link in the email - </string>
    <string name="signup_error_email_already_exists">Email is already registered</string>
    <string name="signup_error_password_min_char">Password should be at least 4 characters</string>
    <string name="signup_error_password_not_identical">Password does not match</string>
    <string name="signup_error_please_check">Please check information entered</string>
    <string name="signup_error_field_required">Required</string>
    <string name="signup_error_email_format">Email format is not correct</string>
    <string name="signup_error_displayname_no_space">Username may not contain space</string>
    <string name="signup_error_displayname_min_max_char">Username may be at least 2 characters and at most 30 characters</string>
    <string name="signup_error_displayname_format">Username may contain only letters(a-z), numbers(0-9), underscore(_), periods(.) and may not end with a period(.)</string>
    <string name="signup_error_displayname_periods">Username may not have 2 periods (.) in a row</string>
    <string name="signup_error_name_min_max_char">Firstname and lastname may be at most 20 characters</string>
    <string name="signup_details_greeting">Welcome to BeautyPop</string>
    <string name="signup_details_displayname_title">Username : </string>
    <string name="signup_details_displayname_note">Only your username will be shown to public</string>
    <string name="signup_details_location_title">Location : </string>
    <string name="signup_details_location_note">BeautyPop will push relevant products to you based on your location</string>
    <string name="signup_details_location">-Select-</string>
    <string name="signup_details_complete">Done!</string>
    <string name="signup_details_error_info">Please check information entered and try again</string>
    <string name="signup_details_error_displayname_already_exists">Username is not available. Please try another one.</string>
    <string name="signup_details_error_displayname_not_entered">Please enter username</string>
    <string name="signup_details_error_displayname_format">Username format not correct</string>
    <string name="signup_details_error_name_not_entered">Please enter your name</string>
    <string name="signup_details_error_location_not_entered">Please select location</string>
    <string name="signup_details_error_status_not_entered">Please select your status</string>
    <string name="tour_complete">Start now!</string>
    <string name="tabset_home">Explore</string>
    <string name="tabset_seller">Feed</string>
    <string name="tabset_activity">Activity</string>
    <string name="tabset_profile">Me</string>
    <string name="seller">Seller</string>
    <string name="buyer">Buyer</string>
    <string name="home_explore_tips">All products in BeautyPop are listed by users. Explore most popular products now！</string>
    <string name="home_following_tips">Follow your favorite sellers. Check out their newest products in your feed.</string>
    <string name="category_tips">Explore products by category filters.</string>
    <string name="my_profile_tips">Click \"Sell\" to list your product now\nSell your style！</string>
    <string name="main_tab_seller">Recommended</string>
    <string name="main_tab_following">Following</string>
    <string name="suggest_for_you">Suggest For You</string>
    <string name="start_following">Start following</string>
    <string name="follow">+ Follow</string>
    <string name="following">Following</string>
    <string name="followings">Followings</string>
    <string name="followers">Followers</string>
    <string name="user_followers">Followers</string>
    <string name="products">Products</string>
    <string name="shop_now">Shop Now</string>
    <string name="view_sellers">Meet our sellers</string>
    <string name="no_activity">~ No Activity ~</string>
    <string name="activity_first_post">You are now a BeautyPop seller! Your first product has been listed:</string>
    <string name="activity_posted">New product listed:</string>
    <string name="activity_commented">commented on product:</string>
    <string name="activity_liked">liked your product.</string>
    <string name="activity_followed">started following you.</string>
    <string name="activity_sold">already sold.</string>
    <string name="activity_game_badge">Congratulations! You got a new badge:</string>
    <string name="new_post_cat">Category:</string>
    <string name="new_post_subcat">Subcategory:</string>
    <string name="new_post_select_category">Choose Category</string>
    <string name="new_post_select_subcategory">Choose Subcategory</string>
    <string name="edit_user_info_login_method">Login with : </string>
    <string name="edit_user_info_email">Email : </string>
    <string name="edit_user_info_aboutme">Description : </string>
    <string name="edit_user_info_name">Name : </string>
    <string name="edit_user_info_save">Save</string>
</resources>