<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_spinner"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:layout_centerInParent="true" />

    <include layout="@layout/view_actionbar"
        android:id="@+id/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/view_bg"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:paddingBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true">

            <LinearLayout
                android:id="@+id/loginLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:weightSum="10" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/edit_user_info_login_method"
                    android:textColor="@color/dark_gray_3"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    android:singleLine="false" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:layout_marginLeft="5dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/fbLoginIcon"
                        android:src="@drawable/ic_fb_logo" />

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:id="@+id/mbLoginIcon"
                        android:src="@drawable/ic_bb_logo" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/displayEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:weightSum="10"
                android:layout_below="@+id/loginLayout">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/edit_user_info_email"
                    android:textColor="@color/dark_gray_3"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    android:singleLine="false" />

                <EditText
                    android:id="@+id/emailEdit"
                    android:background="@drawable/edit_text_round"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="7"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:inputType="textNoSuggestions|textEmailAddress"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/displayNameLayout"
                android:layout_below="@+id/displayEmailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_marginTop="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/signup_details_displayname_title"
                    android:textColor="@color/dark_gray_3"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    android:singleLine="false" />

                <EditText
                    android:id="@+id/displayNameEdit"
                    android:background="@drawable/edit_text_round"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="7"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions|textCapWords" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_below="@+id/displayNameLayout"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="5dp"
                android:id="@+id/displaynameNoteLayout">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/displaynameNoteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="12dp"
                    android:text="@string/signup_details_displayname_note"
                    android:layout_below="@+id/displaynameLayout"
                    android:textColor="@color/gray"
                    android:layout_weight="7"
                    android:layout_gravity="right"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aboutmeLayout"
                android:layout_below="@+id/displaynameNoteLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/aboutmeText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/edit_user_info_aboutme"
                    android:textColor="@color/dark_gray_3"
                    android:singleLine="false"
                    android:layout_weight="3" />

                <EditText
                    android:id="@+id/aboutMeEdit"
                    android:background="@drawable/edit_text_round"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_toRightOf="@+id/aboutmeText"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="7"
                    android:layout_marginLeft="5dp"
                    android:gravity="top"
                    android:inputType="textNoSuggestions|textMultiLine|textCapSentences"
                    android:maxLines="10" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nameLayout"
                android:layout_below="@+id/aboutmeLayout"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:weightSum="10"
                android:transitionGroup="true">
                <TextView
                    android:id="@+id/nameText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/edit_user_info_name"
                    android:textColor="@color/dark_gray_3"
                    android:layout_gravity="center_vertical"
                    android:singleLine="false"
                    android:layout_weight="3" />

                <EditText
                    android:id="@+id/lastNameEditText"
                    android:layout_weight="3.5"
                    android:hint="@string/signup_lastname_hint"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:background="@drawable/edit_text_round"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions|textCapWords" />
                <EditText
                    android:id="@+id/firstNameEditText"
                    android:layout_weight="3.5"
                    android:hint="@string/signup_firstname_hint"
                    android:layout_marginLeft="5dp"
                    android:textSize="16dp"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:background="@drawable/edit_text_round"
                    android:singleLine="true"
                    android:inputType="textNoSuggestions|textCapWords" />
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/locationLayout"
                android:layout_below="@+id/nameLayout"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="25dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/locationText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/signup_details_location_title"
                    android:layout_below="@+id/displaynameLayout"
                    android:textSize="16dp"
                    android:textColor="@color/dark_gray_3"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical"
                    android:singleLine="false" />

                <Spinner
                    android:id="@+id/locationSpinner"
                    android:background="@drawable/spinner_bg"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@+id/locationText"
                    android:layout_alignTop="@+id/locationText"
                    android:spinnerMode="dropdown"
                    android:layout_gravity="center"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_below="@+id/locationLayout"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="5dp"
                android:id="@+id/locationNoteLayout" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/locationNoteText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textSize="12dp"
                    android:text="@string/signup_details_location_note"
                    android:layout_below="@+id/displaynameLayout"
                    android:textColor="@color/gray"
                    android:layout_weight="7"
                    android:layout_gravity="right"
                    android:layout_marginLeft="5dp" />
            </LinearLayout>

            <Button
                android:id="@+id/finishButton"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="@string/edit_user_info_save"
                android:background="@drawable/button_pink"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="35dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:textColor="@color/white"
                android:layout_below="@+id/locationNoteLayout" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>