<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/feed_bg"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/catLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_below="@+id/bar6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="@string/new_post_cat"
            android:textColor="@color/dark_gray_2"
            android:textSize="15dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:id="@+id/catText" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/selectCatLayout"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/catIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="false"
                android:background="@drawable/image_rounded_thin"
                android:layout_toRightOf="@+id/catText"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="false"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/catName"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="false"
                android:layout_marginLeft="5dp"
                android:textColor="@color/pink"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:layout_toRightOf="@+id/catIcon"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/selectCatText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="false"
                android:layout_marginLeft="5dp"
                android:text="@string/new_post_select_category"
                android:textColor="@color/pink"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:layout_toRightOf="@+id/catIcon"
                android:layout_gravity="center_vertical" />

            <ImageView
                android:id="@+id/selectCatIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentBottom="false"
                android:layout_toRightOf="@+id/catText"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="false"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/dropdown_arrow" />
        </LinearLayout>

    </RelativeLayout>
    <View
        android:id="@+id/bar7"
        android:background="@drawable/bar1"
        android:layout_width="match_parent"
        android:layout_height="0.8dp" />

    <RelativeLayout
        android:id="@+id/subCatLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_below="@+id/bar6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:text="@string/new_post_subcat"
            android:textColor="@color/dark_gray_2"
            android:textSize="15dp"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:id="@+id/subCatText" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/selectSubCatLayout"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/subCatIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentBottom="false"
                android:background="@drawable/image_rounded_thin"
                android:layout_toRightOf="@+id/catText"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="false"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/subCatName"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="false"
                android:layout_marginLeft="5dp"
                android:textColor="@color/light_pink"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:layout_toRightOf="@+id/catIcon"
                android:layout_gravity="center_vertical" />

            <TextView
                android:id="@+id/selectSubCatText"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="false"
                android:layout_marginLeft="5dp"
                android:text="@string/new_post_select_subcategory"
                android:textColor="@color/light_pink"
                android:textSize="15dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:layout_toRightOf="@+id/catIcon"
                android:layout_gravity="center_vertical" />

            <ImageView
                android:id="@+id/selectSubCatIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentBottom="false"
                android:layout_toRightOf="@+id/catText"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="false"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/dropdown_arrow" />
        </LinearLayout>

    </RelativeLayout>

    <com.yalantis.phoenix.PullToRefreshView
        android:visibility="gone"
        android:id="@+id/pull_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:visibility="gone"
            android:id="@+id/feedView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

    </com.yalantis.phoenix.PullToRefreshView>

    <RelativeLayout
        android:id="@+id/searchLayout"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/light_pink">

        <TextView
            android:id="@+id/searchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:text="SEARCH"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RelativeLayout>

</LinearLayout>
